2007-02-04  Kazu Hirata  <kazu@codesourcery.com>

	* config/bfin/bfin-modes.def, config/bfin/bfin.c,
	config/bfin/bfin.md, config/bfin/predicates.md: Follow
	spelling conventions.

2007-02-04  Richard Guenther  <rguenther@suse.de>

	PR middle-end/30636
	* fold-const.c (try_move_mult_to_index): Make sure to not
	overflow one dimension of a multi-dimensional array access.

2007-02-04  Jan Hubicka  <jh@suse.cz>

	* passes.c (init_optimization_passes): Reindent.

2007-02-04  Jan Hubicka  <jh@suse.cz>
	    Eric Botcazou  <ebotcazou@libertysurf.fr>

	* tree-optimize.c (has_abnormal_outgoing_edge_p): Move to tree-inline.
	(execute_fixup_cfg): Break out the abnormal goto code.
	* tree-inline.c (has_abnormal_outgoing_edge_p): Move here from
	tree-optimize.c.
	(make_nonlocal_label_edges): Move here from execute_fixup_cfg.
	(optimize_inline_calls): Call make_nonlocal_label_edges.

2007-02-04  Jan Hubicka  <jh@suse.cz>

	* tree-ssa-copyrename.c (copy_rename_partition_coalesce): Return
	true when something was changed.
	(rename_ssa_copies): When something was changed, do
	TODO_remove_unused_locals.
	* tree-ssa-forwprop.c (tree_ssa_forward_propagate_single_use_value):
	add TODO_remove_unused_locals when instruction was removed.

2007-02-04  Jan Hubicka  <jh@suse.cz>

	* ipa-inline.c (try_inline): Improve debug output; work on already
	inline edges too.
	(cgraph_decide_inlining_incrementally): Indent; improve debug output;
	call try_inline for already inlined edges too when flattening; 
	inline also functions that make callee growth but overall unit size
	reduce.

2007-02-04  Kazu Hirata  <kazu@codesourcery.com>

	* config/m32c/bitops.md, config/m32c/jump.md,
	config/m32c/m32c.c, config/m32c/m32c.h, config/m32r/m32r.c,
	config/m32r/m32r.h, config/m32r/m32r.md,
	config/m32r/predicates.md, config/m68hc11/larith.asm,
	config/m68hc11/m68hc11.c, config/m68hc11/m68hc11.h,
	config/m68k/m68k.h, config/mcore/mcore.md, config/mips/4k.md,
	config/mips/mips-protos.h, config/mips/mips.c,